# libtorch_example

./: .gitignore  CMakeLists.txt  README.md
include/: block.h  bottleneck.h  conv_options.h  resnet101_impl.h
scripts/: model.py  model_load.py  resnet101.py  test_model.py
src/: block.cpp  bottleneck.cpp  example-app.cpp  load-model.cpp  resnet101_impl.cpp  test-model-jit.cpp  test-model.cpp
